--- a/Ropa/Base.lproj/Main.storyboard
+++ b/Ropa/Base.lproj/Main.storyboard
@@ -1266,6 +1266,21 @@
             </objects>
             <point key="canvasLocation" x="692" y="3081"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="1Ju-8h-w75">
+            <objects>
+                <viewController id="Ity-TA-S66" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iF1-vs-f24">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="vFg-xq-tz7"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aQ1-RR-V6I" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1454" y="3081"/>
+        </scene>
         <!--Item-->
         <scene sceneID="rq0-L2-CUk">
             <objects>
