UserInfoViewController 使用者資料顯示

--- a/Ropa/Base.lproj/Main.storyboard
+++ b/Ropa/Base.lproj/Main.storyboard
@@ -1189,7 +1189,7 @@
         <!--User Info View Controller-->
         <scene sceneID="vUN-pV-SYx">
             <objects>
-                <viewController id="okg-n7-MZE" customClass="UserInfoViewController" customModule="Ropa" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UserInfoViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="okg-n7-MZE" customClass="UserInfoViewController" customModule="Ropa" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2M9-cj-tgy">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
